--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
   "devDependencies": {
     "@babel/core": "^7.9.0"
   },
-  "private": true
+  "private": true,
+  "volta": {
+    "node": "18.16.0",
+    "pnpm": "8.6.0"
+  }
 }
